--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         
         <div class="container-footer-social">
             <p class="footer-text-social">Social media</p>
-            <ul class="footer-list-social">
+            <ul class="footer-list-social list">
                 <li class="footer-item-social">
                     <a class="list-social" href="">
                         <svg class="footer-social-svg" width="24" height="24">
