--- a/index.html
+++ b/index.html
@@ -417,13 +417,16 @@
              <div class="subscribe-container">
             <p class="subscribe-text">Subscribe</p>
             <form class="subscribe-form">
-                    <input type="email" name="user-email" placeholder="E-mail" class="input-mail">
+                    <label>
+                        <input type="email" name="user-email" placeholder="E-mail" class="input-mail">
                     <button class="subscribe-button" type="submit">
                         Subscride
                         <svg class="subscribe-svg" width="24" height="24" aria-label="telegram">
                             <use href="./images/icons.svg#icon-telegram-footter"></use>
                         </svg>
                     </button>
+                </label>
+                
             </form>
 
         </div>
