--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                     <label class="modal-form-checkbox-label" for="user-privacy">
                         <span class="modal-form-checkbox-mark">
                             <svg class="modal-mark-icon" width="10" height="8" aria-label="icon-check">
-                                <use href="./images/icons.svg#icon-iconiconcheck"></use>
+                                <use href="./images/icons.svg#icon-concheck"></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the
