--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                         class="input-mail">
                     </label>
                     <button class="subscribe-button" type="submit">
-                        Subscride
+                        Subscribe
                         <svg class="subscribe-svg" width="24" height="24" aria-label="telegram">
                             <use href="./images/icons.svg#icon-telegram-footter"></use>
                         </svg>
